Release 0.9.6 (not yet released -- more may come)

- Issue 125: Support prospective search API.
- Issue 108: Remove get_or_insert() from Context.
- Issue 117 (again): Improve cache/query interaction.
- Explicit batch_size sets default for prefetch_size.
- Add urlfetch support to Context.
- Issue 111: Allow specifying a kind for KeyProperty.
- Issue 129: FilterNode should convert new Key to old Key.
- Add support for BlobKey in Expando (an old TODO).
- Issue 132: Use either json or simplejson in JsonProperty.
- Issue 131: Suppress debug messages about threading.local.

----------------------------------------

Release 0.9.5

Various minor issues fixed over the holidays.

- Issue 63: Add PickleProperty, JsonProperty.
- Improve type check for ancestor parameter to query().
- Fix kind-less ancestor queries.
- Issue 121: Do not die on *StructProperty equal to None.
- Issue 119: Pre-compute the subclass when deserializing PolyModel.
- Issue 123: Support custom property inside repeated StructuredProperty.
- Issue 117: Simplify policy for updating cache with query results.
- Issue 124: Don't log webob exceptions at alarming levels.
- Issue 126: Improve repr() of Futures.
- Issue 127: Fix Deadlock error in code that doesn't use @context.toplevel.

----------------------------------------

Release 0.9.4

A pretty significant release, but not 1.0 since we're still in
experimental mode.

New features:

- Issue 35: Added PolyModel class.
- Added Django middleware to automatically manage the Context.
- Killed Model._get_kind_map(). Use Model._kind_map instead.
- issue 110: Add auto_current_user[_add] to UserProperty.
- Issue 113: Add datastore statistics.
- Make _validate() composable, add _to_base_type() and _from_base_type().
  See section "Writing Property Subclasses" in the docs.
- Issue 93: Add metadata queries.
- Issue 99: Add Model._to_dict().
- Issue 102: You can now do "from ndb import *" to import Model, all
  Property subclasses, etc.  (Also issue 109.)